@@ -89,7 +89,7 @@
             id=menu-editor-map
             title= _ "Map"
             image=button_menu/menu_button_copper_H20
-            items=editor-map-resize,editor-map-rotate,editor-map-generate, editor-map-apply-mask,editor-map-create-mask-to,menu-editor-transitions,editor-refresh,editor-refresh-image-cache,togglegrid,editor-draw-coordinates,editor-draw-terrain-codes
+            items=editor-map-resize,editor-map-rotate,editor-map-generate, editor-map-apply-mask,editor-map-create-mask-to,menu-editor-transitions,editor-refresh,editor-refresh-image-cache,togglegrid,editor-draw-coordinates,editor-draw-terrain-codes,editor-draw-num-of-bitmaps
             rect="+0,=,+100,+20"
             xanchor=fixed
             yanchor=fixed
@@ -433,6 +433,16 @@
         [action]
             id=toggle_terrain_codes_button_editor
             items=editor-draw-terrain-codes
+            type=checkbox
+            image=button_square/button_square_30
+            tooltip_name_prepend=yes
+            rect="=-31,=,+30,+30"
+            xanchor=right
+            yanchor=fixed
+        [/action]
+        [action]
+            id=toggle_num_of_bitmaps_button_editor
+            items=editor-draw-num-of-bitmaps
             type=checkbox
             image=button_square/button_square_30
             tooltip_name_prepend=yes
