@@ -166,7 +166,7 @@ enum HOTKEY_COMMAND {
 	HOTKEY_EDITOR_REFRESH_IMAGE_CACHE,
 
 	// Draw
-	HOTKEY_EDITOR_DRAW_COORDINATES, HOTKEY_EDITOR_DRAW_TERRAIN_CODES,
+	HOTKEY_EDITOR_DRAW_COORDINATES, HOTKEY_EDITOR_DRAW_TERRAIN_CODES, HOTKEY_EDITOR_DRAW_NUM_OF_BITMAPS,
 
 	// Side
 	HOTKEY_EDITOR_SIDE_NEW,
